<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Rojo"
    android:foregroundTint="#303233"
    android:orientation="vertical">

    <include layout="@layout/appbar"></include>

    <ImageView
        android:id="@+id/blurryImage"
        android:layout_width="705dp"
        android:layout_height="715dp"
        android:alpha="0.2"
        android:contentDescription="@string/blurryImageDescripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/applogo" />

    <ImageView
        android:id="@+id/userLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="62dp"
        android:contentDescription="@string/userLogoDescription"
        app:layout_constraintBottom_toTopOf="@+id/InputEmailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userlogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="250dp"
        android:textColorHint="@color/Blanco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Amarillo"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/Blanco"
            android:textColorHighlight="@color/Blanco"
            android:textColorHint="@color/Blanco"
            android:textColorLink="@color/Blanco" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPasswdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="305dp"
        android:textColorHint="@color/Blanco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Amarillo"
            android:hint="@string/hintPasswd"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="@color/Blanco" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPasswdLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="360dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/Blanco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwdInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Amarillo"
            android:hint="@string/hintPasswd"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="@color/Blanco" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/registrarmeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPasswdLayout2"
        app:layout_constraintVertical_bias="0.014">

        <Spinner
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:entries="@array/sexo"
            android:spinnerMode="dropdown"
            tools:visibility="visible" />

        <Spinner
            android:id="@+id/añoNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:entries="@array/añosNacimiento" />
    </LinearLayout>

    <Button
        android:id="@+id/registrarmeButton"
        android:layout_width="249dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/Amarillo"
        android:onClick="onClickRegistrarme"
        android:text="@string/registrarme"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/Blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>