<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha="0.8"
        android:outlineAmbientShadowColor="@color/Negro"
        android:translationZ="10dp"
        app:cardBackgroundColor="@color/Amarillo"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:layoutMode="opticalBounds"
            android:translationZ="10dp">

            <TextView
                android:id="@+id/beneficio"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="39dp"
                android:text="@string/aquíVaMeta"
                android:textAlignment="center"
                android:textColor="@color/Negro"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
</LinearLayout>