...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreAppMayus"
        app:srcCompat="@drawable/applogo" />

    <Button
        android:id="@+id/botonTransparente"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:background="@color/Rojo"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
